<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_records_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/records_total"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_records_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="0"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_records_total"
        app:layout_constraintStart_toEndOf="@+id/text_records_total"
        app:layout_constraintTop_toTopOf="@+id/text_records_total" />

    <TextView
        android:id="@+id/text_records_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/found_records"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_records" />

    <TextView
        android:id="@+id/text_records_found_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="0"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_records_found"
        app:layout_constraintStart_toEndOf="@+id/text_records_found"
        app:layout_constraintTop_toTopOf="@+id/text_records_found"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/search_records"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/name_or_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_records_total" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_search_records"
            android:text="Aggregate count"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintRight_toLeftOf="@id/button_add_record"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button_add_record"
            style="@string/add_record"
            android:text="@string/add_record"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>